--- a/Brush/Base.lproj/Main.storyboard
+++ b/Brush/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -27,7 +28,7 @@
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="DCT-8c-go1">
                                 <rect key="frame" x="8" y="678" width="398" height="50"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ae-Av-MlY" customClass="CustomButton" customModule="Brush" customModuleProvider="target">
+                                    <button opaque="NO" alpha="0.75" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ae-Av-MlY" customClass="CustomButton" customModule="Brush" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <color key="backgroundColor" red="0.00026612686630551365" green="0.43756136254435424" blue="0.79094803333282471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
@@ -43,7 +44,7 @@
                                             <action selector="blueTapped:" destination="BYZ-38-t0r" eventType="touchDragInside" id="e8k-D8-sXt"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eGB-UQ-pDr" customClass="CustomButton" customModule="Brush" customModuleProvider="target">
+                                    <button opaque="NO" alpha="0.75" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eGB-UQ-pDr" customClass="CustomButton" customModule="Brush" customModuleProvider="target">
                                         <rect key="frame" x="69.666666666666671" y="0.0" width="50" height="50"/>
                                         <color key="backgroundColor" red="0.0" green="0.75686274509803919" blue="0.63529411764705879" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -59,7 +60,7 @@
                                             <action selector="greenTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bgv-KG-EQQ"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aap-7s-5c1" customClass="CustomButton" customModule="Brush" customModuleProvider="target">
+                                    <button opaque="NO" alpha="0.75" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aap-7s-5c1" customClass="CustomButton" customModule="Brush" customModuleProvider="target">
                                         <rect key="frame" x="139.33333333333334" y="0.0" width="50" height="50"/>
                                         <color key="backgroundColor" red="1" green="0.97490776909722221" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
@@ -75,7 +76,7 @@
                                             <action selector="yellowTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zjO-If-npZ"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o5z-O8-GgV" customClass="CustomButton" customModule="Brush" customModuleProvider="target">
+                                    <button opaque="NO" alpha="0.75" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o5z-O8-GgV" customClass="CustomButton" customModule="Brush" customModuleProvider="target">
                                         <rect key="frame" x="208.66666666666669" y="0.0" width="50.000000000000057" height="50"/>
                                         <color key="backgroundColor" red="1" green="0.33496143380149712" blue="0.27509401633099884" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
@@ -192,13 +193,55 @@
                                     <action selector="shareTapped:" destination="6N5-j0-dTc" eventType="touchUpInside" id="EGf-d6-vIA"/>
                                 </connections>
                             </button>
+                            <slider clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="52" minValue="4" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="lbo-WQ-q9q">
+                                <rect key="frame" x="18" y="214" width="378" height="31"/>
+                                <color key="minimumTrackTintColor" red="0.99515908959999999" green="0.16735607390000001" blue="0.3943518996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="maximumTrackTintColor" red="0.026740099890000001" green="0.52535573069999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <connections>
+                                    <action selector="sliderChanged:" destination="6N5-j0-dTc" eventType="valueChanged" id="PvA-5b-ITC"/>
+                                </connections>
+                            </slider>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TOm-Kw-krR" customClass="CustomView" customModule="Brush" customModuleProvider="target">
+                                <rect key="frame" x="157" y="274" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="iUH-Zr-WLj"/>
+                                    <constraint firstAttribute="width" constant="100" id="n6f-5j-cYy"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="50"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yl6-AW-Alc" customClass="CustomView" customModule="Brush" customModuleProvider="target">
+                                <rect key="frame" x="157" y="274" width="100" height="100"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Wzz-nw-szj"/>
+                                    <constraint firstAttribute="width" constant="100" id="s4n-y2-BnI"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="50"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="lbo-WQ-q9q" firstAttribute="leading" secondItem="Png-pR-lu5" secondAttribute="leadingMargin" id="0mm-KC-3ca"/>
+                            <constraint firstItem="Yl6-AW-Alc" firstAttribute="centerX" secondItem="TOm-Kw-krR" secondAttribute="centerX" id="19n-BO-COg"/>
+                            <constraint firstItem="lbo-WQ-q9q" firstAttribute="top" secondItem="FR4-Wd-hGH" secondAttribute="bottom" constant="30" id="1Pd-3c-qJY"/>
                             <constraint firstItem="FR4-Wd-hGH" firstAttribute="centerX" secondItem="Png-pR-lu5" secondAttribute="centerX" id="9E2-Jn-Gm3"/>
+                            <constraint firstItem="TOm-Kw-krR" firstAttribute="centerX" secondItem="Png-pR-lu5" secondAttribute="centerX" id="9j2-xW-t2r"/>
+                            <constraint firstItem="Yl6-AW-Alc" firstAttribute="centerY" secondItem="TOm-Kw-krR" secondAttribute="centerY" id="DjR-Lf-kEb"/>
                             <constraint firstItem="dck-IO-FaR" firstAttribute="leading" secondItem="Png-pR-lu5" secondAttribute="leading" id="KRc-Tk-7Gc"/>
-                            <constraint firstItem="FR4-Wd-hGH" firstAttribute="top" secondItem="OO4-Sy-sZQ" secondAttribute="bottom" constant="60" id="Qyc-ek-I5F"/>
+                            <constraint firstItem="FR4-Wd-hGH" firstAttribute="top" secondItem="OO4-Sy-sZQ" secondAttribute="bottom" constant="60" id="Qyc-ek-I5F">
+                                <variation key="heightClass=compact-widthClass=compact" constant="20"/>
+                            </constraint>
+                            <constraint firstItem="TOm-Kw-krR" firstAttribute="top" secondItem="lbo-WQ-q9q" secondAttribute="bottom" constant="30" id="Swf-Nr-Kvu"/>
                             <constraint firstAttribute="trailing" secondItem="dck-IO-FaR" secondAttribute="trailing" id="UPY-y1-C6V"/>
+                            <constraint firstItem="lbo-WQ-q9q" firstAttribute="trailing" secondItem="Png-pR-lu5" secondAttribute="trailingMargin" id="dVq-2I-rNL"/>
                             <constraint firstItem="cjy-GU-KWm" firstAttribute="top" secondItem="dck-IO-FaR" secondAttribute="bottom" id="kmM-XH-DvQ"/>
                             <constraint firstItem="dck-IO-FaR" firstAttribute="top" secondItem="Png-pR-lu5" secondAttribute="top" id="uA5-Wf-vcw"/>
                         </constraints>
@@ -211,6 +254,12 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="brushSize" destination="Yl6-AW-Alc" id="Agk-ZM-h9b"/>
+                        <outlet property="height" destination="Wzz-nw-szj" id="yRS-W7-KKQ"/>
+                        <outlet property="slider" destination="lbo-WQ-q9q" id="zxb-wd-QQP"/>
+                        <outlet property="width" destination="s4n-y2-BnI" id="pRA-YR-W6V"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zq6-4k-cfn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
